--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PieChart</string>
+    <string name="app_name">FC</string>
     <string name="title_home">Thống kê</string>
     <string name="title_dashboard">Danh sách</string>
     <string name="title_notifications">Thông tin</string>
