update Page choose

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Thống kê</string>
     <string name="title_dashboard">Danh sách</string>
     <string name="title_notifications">Thông tin</string>
+    <string name="sub_heading_page_choose">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel bibendum ex, quis mollis arcu. Maeceis odio. Etiam commodo congue augue a eleifend. Donec turpis lacus, iaculis sed sagittis vitae, gravida ac ex.</string>
 </resources>
