Tối ưu luồng điều hướng giữa LoginActivity và ChooseFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
 
     <!--Files are using: fragment_budget.xml, -->
     <string name="Advance_payment_and_reimbursement">Tạm ứng/hoàn ứng</string>
+    <string name="logout">Logout</string>
+    <string name="i_vai_tr">Đổi vai trò</string>
 
 </resources>
