--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -15,7 +15,7 @@
 
     <!--Files are using: fragment_budget.xml, -->
     <string name="statistics">Thống kê ngân sách</string>
-    <string name="debt">Quản lý nợ và trả nợ</string>
+    <string name="thuNo">Quản lý nợ và trả nợ</string>
     <string name="financial_goals">Mục Tiêu Tài Chính</string>
 
     <!--Files are using: fragment_budget.xml, -->
